--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 
-<!--Seccion especial
+<!--Seccion especial-->
 <section class="special">
 <div>
 <h1>- Hoy -</h1>
@@ -44,27 +44,14 @@
     <dl>
 
     <dt>
-      <span>Arroz con pato </span>
+      <span>Pachamanca</span>
       <span>S/15.00</span>
-    <span><a class="btn btn-dark btn-sm" href="https://wa.link/vuiqiu" role="button">Pedir</a></span></dt>
- <dd></dd> 
-
- <dt>
- <span>Pollada </span>
-      <span>S/15.00</span>
-    <span><a class="btn btn-dark btn-sm" href="https://wa.link/swy4qu" role="button">Pedir</a></span></dt>
- <dd></dd> 
-
- <dt>
- <span>Jalea</span>
-      <span>S/15.00</span>
-    <span><a class="btn btn-dark btn-sm" href="https://wa.link/9urx1j" role="button">Pedir</a></span></dt>
+    <span><a class="btn btn-dark btn-sm" href="https://api.whatsapp.com/send?phone=51952961406&text=Hola%2C%20quiero%20pedir%20una%20pachamanca" role="button">Pedir</a></span></dt>
  <dd></dd> 
   
   </dl>
     </div>
 </section>
- Final de seccion special-->
 
 <!--Seccion 1-->
 <section class="parrillas">
