--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 
-<!--Seccion especial-->
+<!--Seccion especial
 <section class="special">
 <div>
 <h1>- Hoy -</h1>
@@ -52,6 +52,9 @@
   </dl>
     </div>
 </section>
+-->
+
+
 
 <!--Seccion 1-->
 <section class="parrillas">
@@ -102,11 +105,7 @@
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/szg0m6" role="button">Pedir</a></span></dt>
     <dd>+ papas + ensalada</dd>
    
-    <dt>
-      <span>Hamburguesa artesanal</span>
-      <span>S/7.00</span>
-    <span><a class="btn btn-dark btn-sm" href="https://wa.link/plyxq0" role="button">Pedir</a></span></dt>
-    <dd>+ papas fritas + cremas</dd> 
+
  
     </dl>
     </div>
