--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 </section>
 
 
-<!--Seccion especial
+<!--Seccion especial-->
 <section class="special">
 <div>
+  <h6>Felices Fiestas Patrias </h6>
 <h1>- Hoy -</h1>
 </div>
 
@@ -44,15 +45,15 @@
     <dl>
 
     <dt>
-      <span>Pachamanca</span>
-      <span>S/17.00</span>
-    <span><a class="btn btn-dark btn-sm" href="https://api.whatsapp.com/send?phone=51952961406&text=Hola%2C%20quiero%20pedir%20una%20pachamanca" role="button">Pedir</a></span></dt>
- <dd></dd> 
+      <span>Pollada parrillera</span>
+      <span>S/15.00</span>
+    <span><a class="btn btn-dark btn-sm" href="https://wa.link/z6ogwt" role="button">Pedir</a></span></dt>
+ <dd>con patacones o papas sancochadas + ensalada</dd> 
   
   </dl>
     </div>
 </section>
--->
+
 
 
 
@@ -105,7 +106,11 @@
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/szg0m6" role="button">Pedir</a></span></dt>
     <dd>+ papas + ensalada</dd>
    
-
+    <dt>
+      <span>Hamburguesa artesanal</span>
+      <span>S/7.00</span>
+    <span><a class="btn btn-dark btn-sm" href="https://wa.link/ifcash" role="button">Pedir</a></span></dt>
+    <dd>+ papas fritas + ensalada</dd>
  
     </dl>
     </div>
@@ -129,12 +134,13 @@
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/k06m4o" role="button">Pedir</a></span> </dt>
     <dd>6 alitas + papas fritas + ensalada</dd> 
 
-    <dt>
+   <!-- <dt>
     <span>Alitas acevichadas</span>
     <span>S/15.00</span>
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/9yk2la" role="button">Pedir</a></span></span></dt>
     <dd>6 alitas + papas fritas + ensalada</dd>
-   
+   -->
+
     <dt>
       <span>Alitas crocantes</span>
       <span>S/15.00</span>
@@ -188,7 +194,7 @@
       <span>Trucha frita</span>
       <span>S/15.00</span>
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/9s1223" role="button">Pedir</a></span></dt>
-  <dd></dd> 
+  <dd>Con papas o yucas + ensalada</dd> 
 
   </dl>
     </div>
