--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 
-<!--Seccion especial-->
+<!--Seccion especial
 <section class="special">
 <div>
   <h6>Felices Fiestas Patrias </h6>
@@ -53,7 +53,7 @@
   </dl>
     </div>
 </section>
-
+-->
 
 
 
