--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/k06m4o" role="button">Pedir</a></span> </dt>
     <dd>6 alitas + papas fritas + ensalada</dd> 
 
-   <!-- <dt>
+   <dt>
     <span>Alitas acevichadas</span>
     <span>S/15.00</span>
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/9yk2la" role="button">Pedir</a></span></span></dt>
-    <dd>6 alitas + papas fritas + ensalada</dd>
-   -->
+    <dd>6 alitas + papas fritas</dd>
+  
 
     <dt>
       <span>Alitas crocantes</span>
@@ -189,6 +189,12 @@
       <span>S/13.00</span>
     <span><a class="btn btn-dark btn-sm" href="https://wa.link/tfknl6" role="button">Pedir</a></span></dt>
   <dd></dd> 
+
+  <dt>
+      <span>Chaufa con alitas</span>
+      <span>S/20.00</span>
+    <span><a class="btn btn-dark btn-sm" href="https://wa.link/yhc681" role="button">Pedir</a></span></dt>
+  <dd>Chaufa criollo + 6 alitas (puedes elegir entre alitas crocantes, acevichadaso bbq) </dd>
 
     <dt>
       <span>Trucha frita</span>
